--- a/src/Themes/assets/themes/smartadmin/assets/css/app.bundle.css
+++ b/src/Themes/assets/themes/smartadmin/assets/css/app.bundle.css
@@ -866,7 +866,7 @@ html {
 /* app logo */
 .page-logo {
   height: 4.125rem;
-  width: 16.875rem;
+  width: 20.875rem;
   /*width: 20.875rem; -- alterado por Harllei Mazetti */
   -webkit-box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.13);
           box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.13);
@@ -889,8 +889,8 @@ html {
     /*width: 28px;*/
     /*height: 28px;*/
     border-radius: 10px;
-    width: 60px;
-    height: 60px; }
+    /*width: 60px;*/
+    height: 30px; }
   .page-logo .page-logo-link {
     -webkit-box-flex: 1;
         -ms-flex: 1 0 auto;
