--- a/src/Module/public/assets/css/estilo.css
+++ b/src/Module/public/assets/css/estilo.css
@@ -50,7 +50,7 @@
   margin-top: 52px !important;
   margin-left: 16px !important;
   overflow: hidden;
-  background-color: brown !important;
+  /*background-color: brown !important;*/
 }
 .carteira-digital-foto {
   width: 80px !important;
