--- a/src/Themes/assets/themes/smartadmin/assets/css/vendors.bundle.css
+++ b/src/Themes/assets/themes/smartadmin/assets/css/vendors.bundle.css
@@ -16136,6 +16136,10 @@ readers do not read off random characters that represent icons */
   src: url("../webfonts/fa-light-300.eot");
   src: url("../webfonts/fa-light-300.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-light-300.woff2") format("woff2"), url("../webfonts/fa-light-300.woff") format("woff"), url("../webfonts/fa-light-300.ttf") format("truetype"), url("../webfonts/fa-light-300.svg#fontawesome") format("svg"); }
 
+.fa {
+    font-family: 'Font Awesome 5 Pro';
+    font-weight: 300; }
+
 .fal {
   font-family: 'Font Awesome 5 Pro';
   font-weight: 300; }
