Install Jquery Upload Preview

--- a/src/Module/public/assets/css/estilo.css
+++ b/src/Module/public/assets/css/estilo.css
@@ -106,3 +106,36 @@
 .select2-container {
   z-index: 9999999;
 }
+#image-preview {
+  width: 120px;
+  height: 110px;
+  position: relative;
+  overflow: hidden;
+  background-color: #ffffff;
+  color: #ecf0f1;
+}
+#image-preview input {
+  line-height: 30px;
+  font-size: 30px;
+  position: absolute;
+  opacity: 0;
+  z-index: 10;
+}
+#image-preview label {
+  position: absolute;
+  z-index: 5;
+  opacity: 0.8;
+  cursor: pointer;
+  background-color: #bdc3c7;
+  width: 30px;
+  height: 30px;
+  font-size: 14px;
+  line-height: 30px;
+  text-transform: uppercase;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  text-align: center;
+}
