--- a/src/Themes/assets/themes/smartadmin/assets/css/vendors.bundle.css
+++ b/src/Themes/assets/themes/smartadmin/assets/css/vendors.bundle.css
@@ -207,7 +207,22 @@ aside.page-sidebar ($nav-width, $nav-background)
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");
+/*@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");*/
+
+/* roboto-regular - latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../webfonts/roboto/roboto-v30-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('../webfonts/roboto/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../webfonts/roboto/roboto-v30-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../webfonts/roboto/roboto-v30-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../webfonts/roboto/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../webfonts/roboto/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+}
+
 :root {
   --blue: #886ab5;
   --indigo: #6610f2;
